--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -1,8 +1,8 @@
 
 /* Theme configuration */
 :root {
-    --dash_bg: rgb(240, 233, 213);
-    --module_bg :rgb(203, 255, 242);
+    --dash_bg: rgb(241, 241, 241);
+    --module_bg : rgb(241, 241, 241);
 
     --small_gap : 5px;
 }
@@ -48,7 +48,7 @@ a {
 
 .dashboard-module{
     background-color: var(--module_bg);
-    border-radius: 5px;
+    border: 1px solid black; border-radius: 5px;
     max-width: 500px;
 }
 
@@ -71,10 +71,9 @@ select{
 }
 .checkboxes{
     flex-wrap: wrap;
+    border: 1px solid black; border-radius: 5px;
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
     padding:var(--small_gap);
-    background-color: #D0F2D7;
 }
 
 .date-range{
