--- a/templates/date_range.html
+++ b/templates/date_range.html
@@ -1,12 +1,14 @@
 <div class="date-range" id="dateRange" class="mb-3">
-    <div class="date">
-        <h5>From</h5>
-        <input type="date" name="from" class="form-control">
-    </div>
+    <h3>Date Range</h3>
+    <div class="dates">
+        <div class="date">
+            <h5>From</h5>
+            <input type="date" name="from" class="form-control">
+        </div>
 
-    <div class="date">
-        <h5>To</h5>
-        <input type="date" name="to" class="form-control">
+        <div class="date">
+            <h5>To</h5>
+            <input type="date" name="to" class="form-control">
+        </div>
     </div>
-    
 </div>
