--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -8,6 +8,7 @@
     <div class="nav-list">
         <h5>Auth</h5>
         <ul>
+            <li><a href="">Edit Account</a></li>
             <li><a href="{% url 'authorization:logout'%}">Logout</a></li>
         </ul>
     </div>
