--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -19,7 +19,8 @@ a {
 
 /* Common Styles */
 .nav-list,
-.dashboard-module, .checkboxes, .date-range {
+div.settlements form,
+.dashboard-module, #reportColumns, .date-range {
     border: 1px solid black;
     border-radius: 5px;
 }
@@ -29,15 +30,12 @@ a {
 
 /* PADDING */
 .sidebar,.nav-list,
-.nav{
+.nav, .dashboard-module,.settlements
+{
     padding: var(--small_gap);
 }
 .nav {
     display: flex; gap: var(--small_gap);
-}
-
-.right{
-    width: 100%;
 }
 
 /* Appearance*/
@@ -45,8 +43,6 @@ a {
     background-color: var(--dash_bg);
     padding: 5px;
 }
-
-
 
 .added-stores{
     display: flex;
@@ -63,7 +59,7 @@ a {
 .dashboard-module{
     background-color: var(--module_bg);
     max-width: 500px;
-    flex-grow: 3;
+    flex-grow: 3; flex-shrink: 4;
 }
 
 .dashboard-module form{
@@ -89,6 +85,11 @@ select{
     padding:var(--small_gap);
 }
 
+#reportColumns{
+    width: 100%;
+    box-sizing: border-box;
+}
+
 .dates{
     display: flex;
     gap: 5px;
@@ -96,35 +97,38 @@ select{
 }
 .date{
     display: flex;
-    gap:5px;
+    gap:3px;
 }
 
 .settlements{
     display: flex;
-    gap:var(--small_gap);
+    flex-direction: row;
     flex-wrap: wrap;
-}
-.settlement{
-    display: flex;
-    gap: var(--small_gap);
 }
 
 div.settlements form{
     width: auto;
 }
 
+.settlement{
+    display: flex;
+    gap: var(--small_gap);
+}
+
 
 /* Side bar */
+.sidebar {
+    box-sizing: content-box;
+    min-width: 145px;
+    background-color: var(--module_bg);
+}
 
+.nav-list {
+    margin: 0px 0px 5px 0px;
+}
 
 ul {
     list-style-type: none;
-}
-
-.sidebar {
-    box-sizing: content-box;
-    min-width: 190px;
-    background-color: var(--module_bg);
 }
 
 .sidebar a{
@@ -135,11 +139,6 @@ ul {
     font-weight: bold;
 }
 
-.nav-list {
-    margin: 0px 0px 5px 0px;
-}
-
-.nav-list h6{
-    font-size: 12px;
-    font-weight: bold;
+.nav-list ul {
+    display: inline;
 }
