--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,6 +3,6 @@
         <a href="">User : {{user}}</a>
     </div>
     <div class="right-nav">
-        <button type="button" onclick="cssDebugger()" class="btn btn-primary">Debug</button>
+        <button type="button" onclick="cssDebugger()" class="btn btn-secondary">Debug</button>
     </div>
 </nav>
