check box injector is working

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -86,6 +86,9 @@
                     <div class="check">
                         <label class="form-check-label" for="pivot_table">Pivot table</label><br>
                         <input class="form-check-input" type="checkbox" id="pivot_table" name="additional_sheet" value="pivot_table">
+
+                        <!-- To be injected -->
+                        <div id="pivotColumns"></div>
                     </div>
                     
                     <div class="check">
