--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -86,9 +86,6 @@
                     <div class="check">
                         <label class="form-check-label" for="pivot_table">Pivot table</label><br>
                         <input class="form-check-input" type="checkbox" id="pivot_table" name="additional_sheet" value="pivot_table">
-
-                        <!-- To be injected -->
-                        <div id="pivotColumns"></div>
                     </div>
                     
                     <div class="check">
@@ -96,6 +93,9 @@
                         <input class="form-check-input" type="checkbox" id="tally_table" name="additional_sheet" value="tally_table">
                     </div>
                 </div>
+
+                <!-- To be injected -->
+                <div id="pivotColumns" class="checkboxes"></div>
 
                 {% include 'date_range.html' %}
                 <button id= "submitButton" type='submit' class="btn btn-secondary">Generate Report</button>
